--- a/index.html
+++ b/index.html
@@ -5,55 +5,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
+      integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="" id="home">WebStudio</a>
+      <a href="" id="home" class="header-logo link"
+        ><span class="header-logo-word">Web</span>Studio</a
+      >
       <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav">
+          <li class="item">
+            <a href="./index.html" class="site-nav-link link current">Студия</a>
+          </li>
+          <li class="item">
+            <a href="./portfolio.html" class="site-nav-link link">Портфолио</a>
+          </li>
+          <li class="item">
+            <a href="" class="site-nav-link link">Контакты</a>
+          </li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="item">
+          <a href="mailto:info@devstudio.com" class="site-auth-link link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="item">
+          <a href="tel:+380961111111" class="site-auth-link link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
 
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="main-section">
+        <h1 class="main-section-title">
+          Эффективные решения для вашего бизнеса
+        </h1>
+        <button type="button" class="main-btn">Заказать услугу</button>
       </section>
 
       <section>
-        <h2>Особенности</h2>
+        <h2 class="section-title visually-hidden">Особенности</h2>
         <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
+          <li class="item">
+            <h3 class="features-section-title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
+          <li class="item">
+            <h3 class="features-section-title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
+          <li class="item">
+            <h3 class="features-section-title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
+          <li class="item">
+            <h3 class="features-section-title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -63,9 +93,9 @@
       </section>
 
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul>
-          <li>
+          <li class="item">
             <img
               src="./images/work-sec/box1.jpg"
               alt="Рабочий процесс, иллюстрационное фото"
@@ -73,7 +103,7 @@
               height="290"
             />
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/work-sec/box2.jpg"
               alt="Рабочий процесс, иллюстрационное фото"
@@ -81,7 +111,7 @@
               height="290"
             />
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/work-sec/box3.jpg"
               alt="Рабочий процесс, иллюстрационное фото"
@@ -92,8 +122,8 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-section">
           <li>
             <img
               src="./images/team-sec/img.jpg"
@@ -101,60 +131,69 @@
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="team-name">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/team-sec/img1.jpg"
               alt="Ольга Репина"
               width="270"
               height="260"
             />
-            <h3>Ольга Репина</h3>
+            <h3 class="team-name">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/team-sec/img2.jpg"
               alt="Николай Тарасов"
               width="270"
               height="260"
             />
-            <h3>Николай Тарасов</h3>
+            <h3 class="team-name">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/team-sec/img3.jpg"
               alt="Михаил Ермаков"
               width="270"
               height="260"
             />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="team-name">Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <p><a href="#home">WebStudio</a></p>
-      <address>
+    <footer class="footer">
+      <p>
+        <a href="#home" class="footer-logo link"
+          ><span class="footer-logo-word">Web</span>Studio</a
+        >
+      </p>
+      <address class="address">
         <ul>
-          <li>
+          <li class="item">
             <a
               href="https://goo.gl/maps/PmJtXKr7N3SHuHkD6"
               target="_blank"
               rel="noopener noreferrer"
+              class="link"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+          <li class="item">
+            <a href="mailto:info@example.com" class="address-conn link"
+              >info@example.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <li class="item">
+            <a href="tel:+380991111111" class="address-conn link"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
