--- a/portfolio.html
+++ b/portfolio.html
@@ -5,148 +5,197 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
+      integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
-      <a href="" id="home">WebStudio</a>
+      <a href="" id="home" class="header-logo link"
+        ><span class="header-logo-word">Web</span>Studio</a
+      >
       <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav">
+          <li class="item">
+            <a href="./index.html" class="site-nav-link link">Студия</a>
+          </li>
+          <li class="item">
+            <a href="./portfolio.html" class="site-nav-link link current"
+              >Портфолио</a
+            >
+          </li>
+          <li class="item">
+            <a href="" class="site-nav-link link">Контакты</a>
+          </li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="item">
+          <a href="mailto:info@devstudio.com" class="site-auth-link link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="item">
+          <a href="tel:+380961111111" class="site-auth-link link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
 
     <main>
       <section>
-          <h2>Типы проектов</h2>
+        <h1 class="section-title visually-hidden">Портфолио проектов</h1>
         <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+          <li class="item">
+            <button class="filter-btn" type="button">Все</button>
+          </li>
+          <li class="item">
+            <button class="filter-btn" type="button">Веб-сайты</button>
+          </li>
+          <li class="item">
+            <button class="filter-btn" type="button">Приложения</button>
+          </li>
+          <li class="item">
+            <button class="filter-btn" type="button">Дизайн</button>
+          </li>
+          <li class="item">
+            <button class="filter-btn" type="button">Маркетинг</button>
+          </li>
         </ul>
-      </section>
-      <section>
-        <h2>Проекты</h2>
+
         <ul>
-          <li>
+          <li class="item">
             <img
               src="./images/portfolio/img1.jpg"
               alt="Сайт Технокряк"
               width="370"
               height="290"
             />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="portfolio-sec-title">Технокряк</h3>
+            <p class="project-direction">Веб-сайт</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/portfolio/img2.jpg"
               alt="Дизайн постера New Orlean vs Golden Star"
               width="370"
               height="290"
             />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="portfolio-sec-title">
+              Постер New Orlean vs Golden Star
+            </h3>
+            <p class="project-direction">Дизайн</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/portfolio/img3.jpg"
               alt="Приложение ресторана Seafood"
               width="370"
               height="290"
             />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-sec-title">Ресторан Seafood</h3>
+            <p class="project-direction">Приложение</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/portfolio/img4.jpg"
               alt="Иллюстрация к проекту Prime"
               width="370"
               height="290"
             />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="portfolio-sec-title">Проект Prime</h3>
+            <p class="project-direction">Маркетинг</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/portfolio/img5.jpg"
               alt="Приложение проекта Boxes"
               width="370"
               height="290"
             />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-sec-title">Проект Boxes</h3>
+            <p class="project-direction">Приложение</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/portfolio/img6.jpg"
               alt="Сайт Inspiration has no Borders"
               width="370"
               height="290"
             />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="portfolio-sec-title">Inspiration has no Borders</h3>
+            <p class="project-direction">Веб-сайт</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/portfolio/img7.jpg"
               alt="Дизайн издания Limited Edition"
               width="370"
               height="290"
             />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="portfolio-sec-title">Издание Limited Edition</h3>
+            <p class="project-direction">Дизайн</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/portfolio/img8.jpg"
               alt="Иллюстрация к проекту LAB"
               width="370"
               height="290"
             />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="portfolio-sec-title">Проект LAB</h3>
+            <p class="project-direction">Маркетинг</p>
           </li>
-          <li>
+          <li class="item">
             <img
               src="./images/portfolio/img9.jpg"
               alt="Приложение Growing Business"
               width="370"
               height="290"
             />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
+            <h3 class="portfolio-sec-title">Growing Business</h3>
+            <p class="project-direction">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <p><a href="#home">WebStudio</a></p>
-      <address>
+    <footer class="footer">
+      <p>
+        <a href="#home" class="footer-logo link"
+          ><span class="footer-logo-word">Web</span>Studio</a
+        >
+      </p>
+      <address class="address">
         <ul>
-          <li>
+          <li class="item">
             <a
               href="https://goo.gl/maps/PmJtXKr7N3SHuHkD6"
               target="_blank"
               rel="noopener noreferrer"
+              class="link"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+          <li class="item">
+            <a href="mailto:info@example.com" class="address-conn link"
+              >info@example.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <li class="item">
+            <a href="tel:+380991111111" class="address-conn link"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
