--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <section>
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-section">
-          <li>
+          <li class="item">
             <img
               src="./images/team-sec/img.jpg"
               alt="Игорь Демьяненко"
